Homework 3 with bonus 2 done.

--- a/Homework_3/appboot.service
+++ b/Homework_3/appboot.service
@@ -3,7 +3,7 @@ Description=Start app
 
 [Service]
 Type=oneshot
-ExecStart=/home/vagrant/script
+ExecStart=/home/vagrant/startapp.sh
 
 [Install]
 WantedBy=multi-user.target
