--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=secret
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
