--- a/pom.xml
+++ b/pom.xml
@@ -95,4 +95,14 @@
 		</plugins>
 	</build>
 
+	<reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>3.0.0-M6</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
 </project>
